# screensaver-dbus

./: CMakeLists.txt  README.md  screensaver-dbus.cpp
src/: main.cpp  screensaver-dbus.cpp  screensaver-dbus.h
